--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,9 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "noEmit": false,
+    "allowImportingTsExtensions": false,
+    "allowJs": true,
+  },
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
